- Temporarily fixed the width of the shift calendar on the facilitor view.
- Tried to approve facilitator automatically when admin manually assigns them to a shift, however an error appears.

--- a/frontend/src/shiftpage/shiftpage.css
+++ b/frontend/src/shiftpage/shiftpage.css
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: flex-start;
     margin-top: 53px;
+    width: 2000px;
 }
 
 .header-container h1 {
